--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "bookstoreapp(p)": "file:..",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.54.2",
