--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 PORT=4001
-MongoDBURI="mongodb://localhost:27017/bookStore"
+MongoDBURI="mongodb+srv://sarojpanrui:R66qWIwpa4o0bZFr@cluster0.npo8uzi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_PASSWORD= R66qWIwpa4o0bZFr
